tests/baselines/reference/parser519458.errors.txt
tests/cases/conformance/parser/ecmascript5/RegressionTests/parser519458.ts(1,1): error TS2304: Cannot find name 'module'.
tests/cases/conformance/parser/ecmascript5/RegressionTests/parser519458.ts(1,21): error TS1005: ';' expected.


==== tests/cases/conformance/parser/ecmascript5/RegressionTests/parser519458.ts (2 errors) ====
    import rect = module("rect"); var bar = new rect.Rect();
    ~~~~~~~~~~~~~~~~~~~~
!!! error TS2304: Cannot find name 'module'.
                        ~
!!! error TS1005: ';' expected.
    